# linkForge

./: .gitignore  Dockerfile  README.md  pyproject.toml
linkforge/: main.py
sprint-11/: README.md
sprint-11/consolidacao/: commander-coordenacao-do-handover-final-e-consolidacao-de-at.md
sprint-11/financeiro/: analyst-relatorio-de-custos-operacionais-e-licenciamento.md
sprint-11/outros/: cos-gestao-de-secrets-chaves-de-api-e-alinhamento-de-g.md
sprint-11/tecnico/: architect-documentacao-de-infraestrutura-e-manual-de-deploy.md  builder-empacotamento-do-codigo-monorepo-e-scripts-de-inst.md
